--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
+    "app_id": "com.uip.moodleapp",
+    "appname": "UIP App",
     "desktopappname": "Moodle Desktop",
     "versioncode": 3820,
     "versionname": "3.8.2",
@@ -8,7 +8,7 @@
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
     "cache_update_frequency_rarely": 43200000,
-    "default_lang": "en",
+    "default_lang": "es-mx",
     "languages": {
         "ar": "عربي",
         "bg": "Български",
